fix: adjuste top banner on mobile

--- a/src/components/TotalTimer.css
+++ b/src/components/TotalTimer.css
@@ -2,18 +2,25 @@
   position: absolute;
   top: 0;
   left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
   width: 100%;
-  height: 50px;
+  padding: 12px 0;
 
   font-size: 25px;
   font-family: monospace;
   color: #ffffff;
 
   background-color: #ff7373;
+
+  box-sizing: content-box;
+}
+
+.total-timer-main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-bottom: 6px;
 }
 
 .workout-start-btn {
@@ -50,6 +57,10 @@
   background-color: rgba(255, 255, 255, 40%);
 }
 
+.time-mobile {
+  display: none;
+}
+
 @media (max-width: 600px) {
   .workout-start-btn {
     position: fixed;
@@ -62,5 +73,13 @@
     font-weight: 600;
 
     z-index: 2;
+  }
+
+  .time-mobile {
+    display: block;
+  }
+
+  .time-desktop {
+    display: none;
   }
 }
